--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2'
 
 services:
   product-service:
-    image: ganeshhp/php_project:latest
+    image: sarkardh/php_project
     ports:
       - 5001:80
 
